[tool.poetry]
name = "iso-assignment"
version = "0.1.0"
description = ""
authors = ["Tomáš Neuschl <tm.neu003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
redis = "^5.0.1"
httpx = "^0.25.0"
fakeredis = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
